roam_boter/AIapi/grammar/aijson/aiJsonParser.py
# Generated from aiJson.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class aiJsonParser ( Parser ):

    grammarFileName = "aiJson.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\"'", "','", "':'", "'{'", "'}'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "AI", "NAME", "CREATOR_ID", "ROOT", "CONDITION", 
                      "CHILDTRUE", "CHILDFALSE", "ACTIONBLOCK", "TYPE_ID", 
                      "ATTRIBUTES", "APHSTRING", "INTEGER", "STRING", "ALPHANUMERIC", 
                      "CHAR", "DIGIT", "APH", "COM", "SC", "LBR", "RBR", 
                      "LB", "RB", "WS" ]

    RULE_startrule = 0
    RULE_ai = 1
    RULE_info = 2
    RULE_name = 3
    RULE_creator_id = 4
    RULE_root = 5
    RULE_node = 6
    RULE_condition = 7
    RULE_conditiondata = 8
    RULE_childtrue = 9
    RULE_childfalse = 10
    RULE_actionblock = 11
    RULE_actionlist = 12
    RULE_action = 13
    RULE_attributes = 14
    RULE_attributevalues = 15
    RULE_attributevalue = 16
    RULE_value = 17
    RULE_type_id = 18

    ruleNames =  [ "startrule", "ai", "info", "name", "creator_id", "root", 
                   "node", "condition", "conditiondata", "childtrue", "childfalse", 
                   "actionblock", "actionlist", "action", "attributes", 
                   "attributevalues", "attributevalue", "value", "type_id" ]

    EOF = Token.EOF
    AI=1
    NAME=2
    CREATOR_ID=3
    ROOT=4
    CONDITION=5
    CHILDTRUE=6
    CHILDFALSE=7
    ACTIONBLOCK=8
    TYPE_ID=9
    ATTRIBUTES=10
    APHSTRING=11
    INTEGER=12
    STRING=13
    ALPHANUMERIC=14
    CHAR=15
    DIGIT=16
    APH=17
    COM=18
    SC=19
    LBR=20
    RBR=21
    LB=22
    RB=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartruleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def ai(self):
            return self.getTypedRuleContext(aiJsonParser.AiContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def EOF(self):
            return self.getToken(aiJsonParser.EOF, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_startrule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartrule" ):
                listener.enterStartrule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartrule" ):
                listener.exitStartrule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartrule" ):
                return visitor.visitStartrule(self)
            else:
                return visitor.visitChildren(self)




    def startrule(self):

        localctx = aiJsonParser.StartruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startrule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(aiJsonParser.LBR)
            self.state = 39
            self.ai()
            self.state = 40
            self.match(aiJsonParser.RBR)
            self.state = 41
            self.match(aiJsonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AiContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AI(self):
            return self.getToken(aiJsonParser.AI, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def info(self):
            return self.getTypedRuleContext(aiJsonParser.InfoContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_ai

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAi" ):
                listener.enterAi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAi" ):
                listener.exitAi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAi" ):
                return visitor.visitAi(self)
            else:
                return visitor.visitChildren(self)




    def ai(self):

        localctx = aiJsonParser.AiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ai)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(aiJsonParser.AI)
            self.state = 44
            self.match(aiJsonParser.SC)
            self.state = 45
            self.info()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InfoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def name(self):
            return self.getTypedRuleContext(aiJsonParser.NameContext,0)


        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(aiJsonParser.COM)
            else:
                return self.getToken(aiJsonParser.COM, i)

        def creator_id(self):
            return self.getTypedRuleContext(aiJsonParser.Creator_idContext,0)


        def root(self):
            return self.getTypedRuleContext(aiJsonParser.RootContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfo" ):
                listener.enterInfo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfo" ):
                listener.exitInfo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfo" ):
                return visitor.visitInfo(self)
            else:
                return visitor.visitChildren(self)




    def info(self):

        localctx = aiJsonParser.InfoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_info)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(aiJsonParser.LBR)
            self.state = 48
            self.name()
            self.state = 49
            self.match(aiJsonParser.COM)
            self.state = 50
            self.creator_id()
            self.state = 51
            self.match(aiJsonParser.COM)
            self.state = 52
            self.root()
            self.state = 53
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(aiJsonParser.NAME, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def APHSTRING(self):
            return self.getToken(aiJsonParser.APHSTRING, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = aiJsonParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(aiJsonParser.NAME)
            self.state = 56
            self.match(aiJsonParser.SC)
            self.state = 57
            self.match(aiJsonParser.APHSTRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Creator_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATOR_ID(self):
            return self.getToken(aiJsonParser.CREATOR_ID, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def INTEGER(self):
            return self.getToken(aiJsonParser.INTEGER, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_creator_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreator_id" ):
                listener.enterCreator_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreator_id" ):
                listener.exitCreator_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreator_id" ):
                return visitor.visitCreator_id(self)
            else:
                return visitor.visitChildren(self)




    def creator_id(self):

        localctx = aiJsonParser.Creator_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_creator_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(aiJsonParser.CREATOR_ID)
            self.state = 60
            self.match(aiJsonParser.SC)
            self.state = 61
            self.match(aiJsonParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOT(self):
            return self.getToken(aiJsonParser.ROOT, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def node(self):
            return self.getTypedRuleContext(aiJsonParser.NodeContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = aiJsonParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(aiJsonParser.ROOT)
            self.state = 64
            self.match(aiJsonParser.SC)
            self.state = 65
            self.node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(aiJsonParser.ConditionContext,0)


        def actionblock(self):
            return self.getTypedRuleContext(aiJsonParser.ActionblockContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNode" ):
                return visitor.visitNode(self)
            else:
                return visitor.visitChildren(self)




    def node(self):

        localctx = aiJsonParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_node)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.condition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.actionblock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def CONDITION(self):
            return self.getToken(aiJsonParser.CONDITION, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def conditiondata(self):
            return self.getTypedRuleContext(aiJsonParser.ConditiondataContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = aiJsonParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(aiJsonParser.LBR)
            self.state = 72
            self.match(aiJsonParser.CONDITION)
            self.state = 73
            self.match(aiJsonParser.SC)
            self.state = 74
            self.conditiondata()
            self.state = 75
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditiondataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def type_id(self):
            return self.getTypedRuleContext(aiJsonParser.Type_idContext,0)


        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(aiJsonParser.COM)
            else:
                return self.getToken(aiJsonParser.COM, i)

        def childtrue(self):
            return self.getTypedRuleContext(aiJsonParser.ChildtrueContext,0)


        def childfalse(self):
            return self.getTypedRuleContext(aiJsonParser.ChildfalseContext,0)


        def attributes(self):
            return self.getTypedRuleContext(aiJsonParser.AttributesContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_conditiondata

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditiondata" ):
                listener.enterConditiondata(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditiondata" ):
                listener.exitConditiondata(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditiondata" ):
                return visitor.visitConditiondata(self)
            else:
                return visitor.visitChildren(self)




    def conditiondata(self):

        localctx = aiJsonParser.ConditiondataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditiondata)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(aiJsonParser.LBR)
            self.state = 78
            self.type_id()
            self.state = 79
            self.match(aiJsonParser.COM)
            self.state = 80
            self.childtrue()
            self.state = 81
            self.match(aiJsonParser.COM)
            self.state = 82
            self.childfalse()
            self.state = 83
            self.match(aiJsonParser.COM)
            self.state = 84
            self.attributes()
            self.state = 85
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChildtrueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHILDTRUE(self):
            return self.getToken(aiJsonParser.CHILDTRUE, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def node(self):
            return self.getTypedRuleContext(aiJsonParser.NodeContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_childtrue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChildtrue" ):
                listener.enterChildtrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChildtrue" ):
                listener.exitChildtrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChildtrue" ):
                return visitor.visitChildtrue(self)
            else:
                return visitor.visitChildren(self)




    def childtrue(self):

        localctx = aiJsonParser.ChildtrueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_childtrue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(aiJsonParser.CHILDTRUE)
            self.state = 88
            self.match(aiJsonParser.SC)
            self.state = 89
            self.node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ChildfalseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHILDFALSE(self):
            return self.getToken(aiJsonParser.CHILDFALSE, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def node(self):
            return self.getTypedRuleContext(aiJsonParser.NodeContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_childfalse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChildfalse" ):
                listener.enterChildfalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChildfalse" ):
                listener.exitChildfalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChildfalse" ):
                return visitor.visitChildfalse(self)
            else:
                return visitor.visitChildren(self)




    def childfalse(self):

        localctx = aiJsonParser.ChildfalseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_childfalse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(aiJsonParser.CHILDFALSE)
            self.state = 92
            self.match(aiJsonParser.SC)
            self.state = 93
            self.node()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionblockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def ACTIONBLOCK(self):
            return self.getToken(aiJsonParser.ACTIONBLOCK, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def actionlist(self):
            return self.getTypedRuleContext(aiJsonParser.ActionlistContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_actionblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionblock" ):
                listener.enterActionblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionblock" ):
                listener.exitActionblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionblock" ):
                return visitor.visitActionblock(self)
            else:
                return visitor.visitChildren(self)




    def actionblock(self):

        localctx = aiJsonParser.ActionblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_actionblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(aiJsonParser.LBR)
            self.state = 96
            self.match(aiJsonParser.ACTIONBLOCK)
            self.state = 97
            self.match(aiJsonParser.SC)
            self.state = 98
            self.actionlist()
            self.state = 99
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(aiJsonParser.LB, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiJsonParser.ActionContext)
            else:
                return self.getTypedRuleContext(aiJsonParser.ActionContext,i)


        def RB(self):
            return self.getToken(aiJsonParser.RB, 0)

        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(aiJsonParser.COM)
            else:
                return self.getToken(aiJsonParser.COM, i)

        def getRuleIndex(self):
            return aiJsonParser.RULE_actionlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActionlist" ):
                listener.enterActionlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActionlist" ):
                listener.exitActionlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionlist" ):
                return visitor.visitActionlist(self)
            else:
                return visitor.visitChildren(self)




    def actionlist(self):

        localctx = aiJsonParser.ActionlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_actionlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(aiJsonParser.LB)
            self.state = 102
            self.action()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==aiJsonParser.COM:
                self.state = 103
                self.match(aiJsonParser.COM)
                self.state = 104
                self.action()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(aiJsonParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def type_id(self):
            return self.getTypedRuleContext(aiJsonParser.Type_idContext,0)


        def COM(self):
            return self.getToken(aiJsonParser.COM, 0)

        def attributes(self):
            return self.getTypedRuleContext(aiJsonParser.AttributesContext,0)


        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def getRuleIndex(self):
            return aiJsonParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = aiJsonParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(aiJsonParser.LBR)
            self.state = 113
            self.type_id()
            self.state = 114
            self.match(aiJsonParser.COM)
            self.state = 115
            self.attributes()
            self.state = 116
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRIBUTES(self):
            return self.getToken(aiJsonParser.ATTRIBUTES, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def attributevalues(self):
            return self.getTypedRuleContext(aiJsonParser.AttributevaluesContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributes" ):
                return visitor.visitAttributes(self)
            else:
                return visitor.visitChildren(self)




    def attributes(self):

        localctx = aiJsonParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_attributes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(aiJsonParser.ATTRIBUTES)
            self.state = 119
            self.match(aiJsonParser.SC)
            self.state = 120
            self.attributevalues()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributevaluesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(aiJsonParser.LBR, 0)

        def RBR(self):
            return self.getToken(aiJsonParser.RBR, 0)

        def attributevalue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aiJsonParser.AttributevalueContext)
            else:
                return self.getTypedRuleContext(aiJsonParser.AttributevalueContext,i)


        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(aiJsonParser.COM)
            else:
                return self.getToken(aiJsonParser.COM, i)

        def getRuleIndex(self):
            return aiJsonParser.RULE_attributevalues

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributevalues" ):
                listener.enterAttributevalues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributevalues" ):
                listener.exitAttributevalues(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributevalues" ):
                return visitor.visitAttributevalues(self)
            else:
                return visitor.visitChildren(self)




    def attributevalues(self):

        localctx = aiJsonParser.AttributevaluesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_attributevalues)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(aiJsonParser.LBR)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==aiJsonParser.APHSTRING:
                self.state = 123
                self.attributevalue()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==aiJsonParser.COM:
                    self.state = 124
                    self.match(aiJsonParser.COM)
                    self.state = 125
                    self.attributevalue()
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 133
            self.match(aiJsonParser.RBR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributevalueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def APHSTRING(self):
            return self.getToken(aiJsonParser.APHSTRING, 0)

        def SC(self):
            return self.getToken(aiJsonParser.SC, 0)

        def value(self):
            return self.getTypedRuleContext(aiJsonParser.ValueContext,0)


        def getRuleIndex(self):
            return aiJsonParser.RULE_attributevalue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributevalue" ):
                listener.enterAttributevalue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributevalue" ):
                listener.exitAttributevalue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributevalue" ):
                return visitor.visitAttributevalue(self)
            else:
                return visitor.visitChildren(self)




    def attributevalue(self):
